--- a/style.css
+++ b/style.css
@@ -25,10 +25,14 @@ header img {
 
 body {
   font-family: Arial, sans-serif;
+  background-image: url('/assets/balatrobg.gif');
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
 }
 
 header {
-  background-color: #7f774d; /* verde escuro */
+  background-color: #182325; /* verde escuro */
   color: white;
   width: 100%;
   position: fixed;
@@ -36,15 +40,13 @@ header {
   left: 0;
   z-index: 1000;
   padding: 16px 32px;
+  box-shadow: 0 6px 4px rgba(0, 0, 0, 0.3);
 }
 
 h1 {
   font-family: 'm6x11plus';
   font-size: 50px;
-}
-
-h1 {
-  -webkit-text-stroke: 0.1px #000000;
+  font-weight: 200;
 }
 
 .navbar {
@@ -69,62 +71,85 @@ h1 {
 
 #j {
   color: #a62b2b;
-  -webkit-text-stroke: 0.1px #fffbbc
- 
+  -webkit-text-stroke: 1px #fffbbc
 }
 
 #m {
   color: #f09800;
-  -webkit-text-stroke: 0.01px #000000;
+  -webkit-text-stroke: 1px #000000;
+}
+
+h1, #j, #m, .blob, .ps, .navs, #para, .member-div p, slogan {
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.7);
+}
+
+.member-div p {
+  font-family: 'm6x11plus', sans-serif;
+  font-weight: 200;
+  font-size: 30px;
+  text-align: center;
+  color: #f0c040;
 }
 
 main {
-  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
   margin-top: 120px;
+  color: white;
   padding: 32px;
   max-width: 80%;
   margin-left: auto;
   margin-right: auto;
+  border: 5px solid #1B2E2B;
 
   border-radius: 16px;
-  background: rgba(151, 151, 151, 0.85);
-  background-image: url("/assets/bg.gif");
-  backdrop-filter: blur(4px);
+  background: #2F3A3C;
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.lol {
-  margin-top: 0px;
-  padding: 32px 32px 16px 32px;
-  max-width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  justify-content: center;
+.blind {
+  color: white;
+  padding: 32px;
+  max-width: 100%;
+  border: 5px solid #1B2E2B;
+
+  border-radius: 16px;
+  background: #2F3A3C;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-#two {
-  padding-top: 16px;
+img {
+  display: flex;
+  align-items: center;
 }
 
 .calc {
   display: block;
-}
-
-.calc {
-  width: 40%;
+  width: 50%;
   padding: 10px;
   margin-top: 10px;
-  border: 1px solid #ccc;
+  color: white;
+  background-color: #546265;
+  border: 3px solid #1B2E2B;
   border-radius: 4px;
   font-family: 'Poppins', sans-serif;
 }
 
+input::placeholder {
+  color: rgb(175, 175, 175);
+}
+
 #calcular,  button {
-  background-color: #716445;
-  color: white;
-  border: none;
+  background-color: #d28501;
+  color: rgb(0, 0, 0);
+  border: 2px solid #855401;
   padding: 10px 20px;
   cursor: pointer;
   font-size: 16px;
@@ -132,9 +157,9 @@ main {
   transition: background-color 0.3s, color 0.3s;
 }
 
-#calcular:hover {
-  background-color: #f0c040;
-  color: black;
+#calcular:hover, button:hover {
+  background-color: #a46d0f;
+  color: rgb(255, 255, 255);
 }
 
 .blob {
@@ -147,8 +172,8 @@ main {
 }
 
 .navs {
-  font-family: 'Inter', sans-serif;
-  font-size: 20px;
+  font-family: 'm6x11plus', sans-serif;
+  font-size: 25px;
 }
 
 #para {
@@ -157,15 +182,18 @@ main {
 
 footer {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   align-self: center;
   margin-top: 20px;
   padding-bottom: 20px;
   padding-top: 20px;
+  border-top: 3px solid #000000;
+  font-family: 'Poppins', sans-serif;
 
-  color: white;
-  background-color: #7f774d;
+  color: rgb(151, 151, 151);
+  background-color: #182325;
   max-height: 100%;
 }
 
@@ -174,7 +202,7 @@ footer {
   text-align: center;
 }
 
-#aa {
+#calculadora-container {
   display: flex;
 }
 
@@ -192,7 +220,90 @@ img {
 }
 
 #para {
-  font-family: 'Inter', sans-serif;
-  font-weight: 700;
+  font-family: 'm6x11plus', sans-serif;
+  font-weight: 200;
   margin-top: 10px;
+}
+
+#one, #two, #three {
+  max-width: 80%;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
+}
+
+#one {
+  border: 3px solid #0667a3;
+}
+
+#two {
+  border: 3px solid #9E6B0F;
+}
+
+#three {
+  border: 3px solid #C84946;
+}
+
+#email {
+  text-decoration-color: #9E6B0F;
+  color: #9E6B0F;
+}
+
+.pictures-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 100px;
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.member-div {
+  width: 260px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex-direction: column;
+  padding: 15px;
+  border: 2px solid #152422;
+  border-radius: 5px;
+  background-color: #262e2f;
+}
+
+#slogan {
+  font-family: 'm6x11plus', sans-serif;
+  font-size: 24px;
+  font-weight: 200;
+  text-align: center;
+  margin-top: 2px;
+  color: #a7a7a7;
+}
+
+span {
+  color: rgb(165, 25, 25);
+}
+
+img.member {
+  margin: auto;
+  width: 150px;
+  height: 150px;
+  border-radius: 100px;
+  transition: ease 0.3s;
+}
+
+img.member:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+#repo, a {
+  color: #9b2929;
+  text-decoration: underline;
+  text-decoration-color: #9b2929;
+  font-weight: bold;
+  transition: color 0.3s;
 }
